--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -376,8 +376,8 @@ všetky relevantné informácie týkajúce tohoto kurzu.</li>
 <p><a href="https://julianfaraway.github.io/faraway/ELM/scripts/">ELMwR
 prvé vydanie</a>, <a href="https://julianfaraway.github.io/faraway/ELM/toc2.html">ELMwR druhé
 vydanie</a></p>
-<div id="r-z-prednášky" class="section level4">
-<h4>R z prednášky:</h4>
+<div id="r-z-prednášky" class="section level3">
+<h3>R z prednášky:</h3>
 <p><a href="https://www.dropbox.com/scl/fi/ydjb706jnvqg7ts1pvfmh/introlm.R?rlkey=i82or4a6ltlfecp7v5w0kxlmw&amp;dl=0">Úvod
 a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
 2000</a></p>
@@ -386,16 +386,20 @@ likelihood</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/whmiu1hv7nhivmf6w5m6b/BinomialData.R?rlkey=1dalhhh8s1xp1pd9s4kmz1k4x&amp;dl=0">Binomické
 dáta (z prvej edície ELMwR)</a></p>
 </div>
-<div id="r-cvičenia" class="section level4">
-<h4>R cvičenia:</h4>
+<div id="r-cvičenia" class="section level3">
+<h3>R cvičenia:</h3>
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
+dáta</a></p>
 </div>
-<div id="domáce-úlohy" class="section level4">
-<h4>Domáce úlohy:</h4>
+<div id="domáce-úlohy" class="section level3">
+<h3>Domáce úlohy:</h3>
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Labs1/2026%20DU1?preview=2026_DU1.pdf">DU1</a></p>
 <p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
 na odovzdávanie</a></p>
 </div>
-<div id="misc" class="section level4">
-<h4>Misc:</h4>
+<div id="misc" class="section level3">
+<h3>Misc:</h3>
 <p><a href="https://www.dropbox.com/scl/fi/i447vt9laa8rgh0ughm6k/econx_2b_LL_2024_handout.pdf?rlkey=boiv1jjw891tm17jb2ljesqji&amp;dl=0">Úvod
 do Maximum likelihood (prvých 15 slajdov)</a></p>
 <p>Challenger katastrofa (populárna prednáška): <a href="https://www.youtube.com/watch?v=DZoa4F0aZpM">video prednášky</a>,
