--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -394,7 +394,7 @@ dáta</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Labs1/2026%20DU1?preview=2026_DU1.pdf">DU1</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/5tq8ucj4am4mz2qxwdfdv/2026_DU1.pdf?rlkey=ui4m7svpa627zj6ruvokydaic&st=tlji80st&dl=0">DU1</a></p>
 <p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
 na odovzdávanie</a></p>
 </div>
