--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -388,8 +388,8 @@ dáta (z prvej edície ELMwR)</a></p>
 </div>
 <div id="r-cvičenia" class="section level3">
 <h3>R cvičenia:</h3>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
+<p><a href="https://www.dropbox.com/scl/fi/qkotjrbyv81yf5ln3dqv9/Ex0_Introduction_-Repeating.R?rlkey=qovyl0tf3sv4mge0pk2nx4b7i&st=vh9jgzzm&dl=0">Intro</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/jsa524wmzztn3l2nd2mrb/Ex1_Binom.R?rlkey=z221rjeg8mo7fn7kfsgsz126l&st=eccniy88&dl=0">Binomické
 dáta</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
