--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -388,13 +388,13 @@ dáta (z prvej edície ELMwR)</a></p>
 </div>
 <div id="r-cvičenia" class="section level3">
 <h3>R cvičenia:</h3>
-<p><a href="https://www.dropbox.com/scl/fi/qkotjrbyv81yf5ln3dqv9/Ex0_Introduction_-Repeating.R?rlkey=qovyl0tf3sv4mge0pk2nx4b7i&st=vh9jgzzm&dl=0">Intro</a></p>
-<p><a href="https://www.dropbox.com/scl/fi/jsa524wmzztn3l2nd2mrb/Ex1_Binom.R?rlkey=z221rjeg8mo7fn7kfsgsz126l&st=eccniy88&dl=0">Binomické
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
 dáta</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
-<p><a href="https://www.dropbox.com/scl/fi/5tq8ucj4am4mz2qxwdfdv/2026_DU1.pdf?rlkey=ui4m7svpa627zj6ruvokydaic&st=tlji80st&dl=0">DÚ1</a></p>
+<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Labs1/2026%20DU1?preview=2026_DU1.pdf">DU1</a></p>
 <p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
 na odovzdávanie</a></p>
 </div>
@@ -421,10 +421,10 @@ do Maximum likelihood (prvých 15 slajdov)</a></p>
 <li>Úvod – zhrnutie lineárnych regresných modelov, kompletný
 príklad.</li>
 <li>Modely pre binárne dáta – typy problémov, linková funkcia a
-pravdepodobnosť, štatistické závery, interpretácia,
+pravdepodobnosť, štatistická inferencia, interpretácia,
 prospektívny/retrospektívny výber, mierka vhodnosti modelu,
 overdispersion, párovanie.</li>
-<li>Modely pre počtové dáta – typy problémov, štatistické závery,
+<li>Modely pre dáta typu počet – typy problémov, štatistická inferencia,
 interpretácia, overdispersion, Poissonovo rozdelenie a negatívne
 binomické rozdelenie, modely so zvýšeným počtom nulových hodnôt.</li>
 <li>Kontingenčné tabuľky – nominálne vs ordinálne dáta, 2x2 tabuľky,
