--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -361,7 +361,7 @@ množstvo rôznych štatistických metód a tento kurz má ambíciu pokryť
 veľkú paletu aplikácií, aby ste sa vedeli v praxi dobre orientovať.</p>
 <p>Základnou učebnicou je kniha <a href="https://julianfaraway.github.io/faraway/ELM/">Extending Linear
 Models with R (ELMwR)</a>, ktorá pokrýva okolo 80% obsahu kurzu.</p>
-<p>Cvičenia bude viesť Dr. Michaela Mihoková.</p>
+<p>Cvičenia bude viesť Dr. Michaela Mihoková1.</p>
 <div id="súbory" class="section level2">
 <h2>Súbory</h2>
 <ul>
