--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -390,7 +390,7 @@ dáta (z prvej edície ELMwR)</a></p>
 <h3>R cvičenia:</h3>
 <p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
 <p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
-dáta</a></p>
+dáta</a> <a href="https://www.dropbox.com/scl/fi/7m3vy85lzx3q52n2yjiwh/Ex1_BinomSol.R?rlkey=765az4qs16t44ja2058t5unoz&amp;st=gsetvuqc&amp;dl=0">Riešenie</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
