--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -391,6 +391,8 @@ dáta (z prvej edície ELMwR)</a></p>
 <p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
 <p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
 dáta</a> <a href="https://www.dropbox.com/scl/fi/7m3vy85lzx3q52n2yjiwh/Ex1_BinomSol.R?rlkey=765az4qs16t44ja2058t5unoz&amp;st=gsetvuqc&amp;dl=0">Riešenie</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/ty324jdxt7xk89lc4410c/Ex2_Binom2.R?rlkey=7ew78j4pqkvheoem7w9wejwee&amp;st=o5ebddch&amp;dl=0">Binomické
+dáta 2</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
