--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -388,17 +388,19 @@ dáta (z prvej edície ELMwR)</a></p>
 </div>
 <div id="r-cvičenia" class="section level3">
 <h3>R cvičenia:</h3>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/ExercisesSol?preview=Ex0_Introduction_(Repeating).R">Intro</a></p>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Exercises?preview=Ex1_Binom.R">Binomické
-dáta</a> <a href="https://www.dropbox.com/scl/fi/7m3vy85lzx3q52n2yjiwh/Ex1_BinomSol.R?rlkey=765az4qs16t44ja2058t5unoz&amp;st=gsetvuqc&amp;dl=0">Riešenie</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/xdqim0jx3aq0ue7unox8w/Ex0_Introduction_-Repeating.R?rlkey=e6k5farv7wvbapprh9l8vq1yf&amp;st=e4agm32c&amp;dl=0">Intro</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/jsa524wmzztn3l2nd2mrb/Ex1_Binom.R?rlkey=z221rjeg8mo7fn7kfsgsz126l&amp;st=be1a66ao&amp;dl=0">Binomické
+dáta</a> <a href="https://www.dropbox.com/scl/fi/7m3vy85lzx3q52n2yjiwh/Ex1_BinomSol.R?rlkey=765az4qs16t44ja2058t5unoz&amp;st=nvcvk81j&amp;dl=0">Riešenie</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/ty324jdxt7xk89lc4410c/Ex2_Binom2.R?rlkey=7ew78j4pqkvheoem7w9wejwee&amp;st=o5ebddch&amp;dl=0">Binomické
-dáta 2</a></p>
+dáta2</a> <a href="https://www.dropbox.com/scl/fi/2oqph3ix1vfbm9j9c92bn/Ex2_Binom2Sol.R?rlkey=lwb8yc4v5a0g0e7n0m436v8fv&amp;st=hnaeahbg&amp;dl=0">Riešenie</a></p>
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
-<p><a href="https://www.dropbox.com/home/moderna%20aplikovana%20regresia%202/exercises%20samo/Labs1/2026%20DU1?preview=2026_DU1.pdf">DU1</a></p>
-<p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
-na odovzdávanie</a></p>
+<div id="link-na-odovzdávanie" class="section level5">
+<h5><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
+na odovzdávanie</a></h5>
+<p><a href="https://www.dropbox.com/scl/fi/5tq8ucj4am4mz2qxwdfdv/2026_DU1.pdf?rlkey=ui4m7svpa627zj6ruvokydaic&amp;st=782b0ino&amp;dl=0">DU1</a></p>
+</div>
 </div>
 <div id="misc" class="section level3">
 <h3>Misc:</h3>
