--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -396,12 +396,10 @@ dáta2</a> <a href="https://www.dropbox.com/scl/fi/2oqph3ix1vfbm9j9c92bn/Ex2_Bin
 </div>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy:</h3>
-</div>
-</div>
-<div id="link-na-odovzdávanie" class="section level2">
-<h2><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
-na odovzdávanie</a></h2>
+<p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
+na odovzdávanie</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/5tq8ucj4am4mz2qxwdfdv/2026_DU1.pdf?rlkey=ui4m7svpa627zj6ruvokydaic&amp;st=782b0ino&amp;dl=0">DU1</a></p>
+</div>
 <div id="misc" class="section level3">
 <h3>Misc:</h3>
 <p><a href="https://www.dropbox.com/scl/fi/i447vt9laa8rgh0ughm6k/econx_2b_LL_2024_handout.pdf?rlkey=boiv1jjw891tm17jb2ljesqji&amp;dl=0">Úvod
