--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -399,6 +399,7 @@ dáta2</a> <a href="https://www.dropbox.com/scl/fi/2oqph3ix1vfbm9j9c92bn/Ex2_Bin
 <p><a href="https://www.dropbox.com/request/919VtxAzHfa2I4TUQz4I">link
 na odovzdávanie</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/5tq8ucj4am4mz2qxwdfdv/2026_DU1.pdf?rlkey=ui4m7svpa627zj6ruvokydaic&amp;st=782b0ino&amp;dl=0">DU1</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/l7bioehevkp990vc5t7b3/2026_DU2.pdf?rlkey=d1suz8zumo4jz3t7mzimjus0e&amp;st=zra0zx8q&amp;dl=0">DU2</a></p>
 </div>
 <div id="misc" class="section level3">
 <h3>Misc:</h3>
