--- a/_pages/about.html
+++ b/_pages/about.html
@@ -354,20 +354,20 @@ display: none;
 
 <div id="about-me" class="section level1">
 <h1>About me</h1>
-<p>I am an associate professor at the <a href="https://www.umbmath.sk/">Department of Mathematics</a> of the
+<p>I am an Associate Professor at the <a href="https://www.umbmath.sk/">Department of Mathematics</a> of the
 Faculty of Natural Sciences at the Matej Bel University in Banská
 Bystrica, Slovakia.</p>
 <p>I am also affiliated with <a href="https://www.nhh.no/en/employees/faculty/lukas-laffers/">NHH -
-Norwegian School of Economics in Bergen</a> (associate professor II),
+Norwegian School of Economics in Bergen</a> (Associate Professor II),
 where I defended my <a href="https://lukaslaffers.github.io/files/Dissertation+Laffers.pdf">PhD
-thesis</a> in Economics in 2014. I was appointed to <a href="https://www.muni.cz/en/people/518234-lukas-laffers/qualifications">associate
-professor of Economics</a> (docent) by <a href="https://www.econ.muni.cz/en">Masaryk University in Brno</a> in
-2024.</p>
+thesis</a> in Economics in 2014. I was appointed to <a href="https://www.muni.cz/en/people/518234-lukas-laffers/qualifications">Associate
+Professor of Economics</a> (docent) by <a href="https://www.econ.muni.cz/en">Masaryk University in Brno</a> in
+2024, where I currently work as Researcher II (part-time).</p>
 <p>My research interests lie mainly within the areas of econometrics,
 causal inference, and labor economics. I have also experience in working
 with and analyzing medical data for research.</p>
 <p>My CV can be found <a href="https://lukaslaffers.github.io/files/CV_Laffers_feb2026_eng.pdf">here</a>
-(Feb 2025).</p>
+(Feb 2026).</p>
 </div>
 
 
