--- a/_pages/linreg2.html
+++ b/_pages/linreg2.html
@@ -385,6 +385,8 @@ a zhrnutie LMwR na príklade volebných dát z US štátu Georgia v
 likelihood</a></p>
 <p><a href="https://www.dropbox.com/scl/fi/whmiu1hv7nhivmf6w5m6b/BinomialData.R?rlkey=1dalhhh8s1xp1pd9s4kmz1k4x&amp;dl=0">Binomické
 dáta (z prvej edície ELMwR)</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/tkngz23cils5xpblkgvs7/CountData.R?rlkey=ldikjwjpb3hrphedqyk54nvoy&amp;dl=0">Dáta
+typu počet</a></p>
 </div>
 <div id="r-cvičenia" class="section level3">
 <h3>R cvičenia:</h3>
