--- a/_pages/tp.html
+++ b/_pages/tp.html
@@ -394,6 +394,7 @@ písané v latexu</a></p>
 <div id="domáce-úlohy" class="section level3">
 <h3>Domáce úlohy</h3>
 <p><a href="https://www.dropbox.com/scl/fi/h2o88l6ugqx9wj417ah8q/1-exercise-2026.pdf?rlkey=2cnz7cs0x0vzo1rcuv5bkgft1&amp;dl=0">DU1</a></p>
+<p><a href="https://www.dropbox.com/scl/fi/j0tojmmup6cgxdrw71ci2/2-exercise-2026.pdf?rlkey=4qjr9yq1p2yb3t0g6bxay2p45&amp;st=urorxgrj&amp;dl=0">DU2</a></p>
 <p><a href="https://www.dropbox.com/request/HVa1U470hr0BNbSLoMf8">link
 na odovzdávanie</a></p>
 </div>
